--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -1,4 +1,5 @@
 .hero {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 4rem;
@@ -6,39 +7,53 @@
   padding-inline: var(--spacing-800);
 }
 
-.hero > * {
-    flex: 1;
+.hero::before {
+  content: "";
+  position: absolute;
+  top: -60px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  opacity: 0.05;
+  z-index: -1;
+  background-image: url("../../assets/hero-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.hero-title  {
-    font-size: var(--fs-800);
-    text-transform: none;
-    text-wrap: balance;
+.hero > * {
+  flex: 1;
+}
+
+.hero-title {
+  font-size: var(--fs-800);
+  text-transform: none;
+  text-wrap: balance;
 }
 
 .hero-title-highlight {
-    display: inline-block;
-    color: var(--color-200);
-    text-transform: uppercase;
+  display: inline-block;
+  color: var(--color-200);
+  text-transform: uppercase;
 }
 
 .hero-title-highlight > span {
-    color: var(--color-highlight-400);
-    text-transform: lowercase;
+  color: var(--color-highlight-400);
+  text-transform: lowercase;
 }
 
 .hero-content > div {
-    display: flex;
-    gap: 4rem;
+  display: flex;
+  gap: 4rem;
 }
 
 .hero-content-column {
-    flex: 1;
+  flex: 1;
 }
 
 .hero-content > h3 {
-    color: var(--color-200);
-    border-left: 4px solid var(--color-200);
-    margin-bottom: 1em;
-    padding-inline: var(--spacing-200)
+  color: var(--color-200);
+  border-left: 4px solid var(--color-200);
+  margin-bottom: 1em;
+  padding-inline: var(--spacing-200);
 }
