--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,8 @@ body {
   font-size: var(--fs-400);
   font-family: 'Roboto Condensed', sans-serif;
   line-height: var(--line-height-400);
+  background: linear-gradient(var(--color-400), var(--color-600));
+}
 }
 
 h1, h2, h3 {
@@ -96,24 +98,6 @@ h2 {
 h3 {
   font-size: var(--fs-400);
 }
-
-header {
-  position: relative;
-}
-
-header::before {
-  content: "";
-  position: absolute;
-  top: 0; 
-  left: 0;
-  width: 100%; 
-  height: 100%;  
-  opacity: .2; 
-  z-index: -1;
-  background-image: url('assets/hero-bg.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-} 
 
 section, p {
   margin-bottom: 1em;
