--- a/src/components/nav/index.css
+++ b/src/components/nav/index.css
@@ -1,8 +1,11 @@
 .backdrop {
-  backdrop-filter: blur(10px);
+  transition: background-color 0.5s;
+  background-color: var(--color-600);
+  box-shadow: 0x 1px 2px var(--color-700);
 }
 
 .nav {
+  transition: background-color 0.5s;
   position: sticky;
   z-index: 10;
   top: 0;
