--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,147 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 body {
-	line-height: 1;
+  line-height: 1;
 }
 
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
 
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 :root {
   --fs-200: clamp(0.69rem, calc(0.69rem + 0.02vw), 0.72rem);
-  --fs-300: clamp(0.83rem, calc(0.82rem + 0.06vw), 0.90rem);
-  --fs-400: clamp(1.00rem, calc(0.98rem + 0.12vw), 1.13rem);
-  --fs-500: clamp(1.20rem, calc(1.16rem + 0.20vw), 1.41rem);
+  --fs-300: clamp(0.83rem, calc(0.82rem + 0.06vw), 0.9rem);
+  --fs-400: clamp(1rem, calc(0.98rem + 0.12vw), 1.13rem);
+  --fs-500: clamp(1.2rem, calc(1.16rem + 0.2vw), 1.41rem);
   --fs-600: clamp(1.44rem, calc(1.38rem + 0.31vw), 1.76rem);
-  --fs-700: clamp(1.73rem, calc(1.64rem + 0.45vw), 2.20rem);
+  --fs-700: clamp(1.73rem, calc(1.64rem + 0.45vw), 2.2rem);
   --fs-800: clamp(2.07rem, calc(1.94rem + 0.65vw), 2.75rem);
   --fs-900: clamp(2.49rem, calc(2.31rem + 0.91vw), 3.43rem);
 
   --color-100: hsl(0 100% 100% / 1);
   --color-200: hsl(213 20% 65% / 1);
+  --color-300: hsl(214 16% 25% / 1);
   --color-400: hsl(213 20% 17% / 1);
   --color-600: hsl(213 14% 12% / 1);
   --color-700: hsl(213 5% 5% / 1);
@@ -67,11 +149,11 @@ table {
 
   --line-height-400: 1.4;
   --spacing-200: clamp(0.69rem, calc(0.69rem + 0.02vw), 0.72rem);
-  --spacing-300: clamp(0.83rem, calc(0.82rem + 0.06vw), 0.90rem);
-  --spacing-400: clamp(1.00rem, calc(0.98rem + 0.12vw), 1.13rem);
-  --spacing-500: clamp(1.20rem, calc(1.16rem + 0.20vw), 1.41rem);
+  --spacing-300: clamp(0.83rem, calc(0.82rem + 0.06vw), 0.9rem);
+  --spacing-400: clamp(1rem, calc(0.98rem + 0.12vw), 1.13rem);
+  --spacing-500: clamp(1.2rem, calc(1.16rem + 0.2vw), 1.41rem);
   --spacing-600: clamp(1.44rem, calc(1.38rem + 0.31vw), 1.76rem);
-  --spacing-700: clamp(1.73rem, calc(1.64rem + 0.45vw), 2.20rem);
+  --spacing-700: clamp(1.73rem, calc(1.64rem + 0.45vw), 2.2rem);
   --spacing-800: clamp(2.07rem, calc(1.94rem + 0.65vw), 2.75rem);
   --spacing-900: clamp(2.49rem, calc(2.31rem + 0.91vw), 3.43rem);
 }
@@ -80,13 +162,30 @@ body {
   background-color: var(--color-400);
   color: var(--color-100);
   font-size: var(--fs-400);
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   line-height: var(--line-height-400);
   background: linear-gradient(var(--color-400), var(--color-600));
 }
+
+body::-webkit-scrollbar {
+  width: 1em;
+  background-color: var(--color-600);
 }
 
-h1, h2, h3 {
+body::-webkit-scrollbar-track {
+  background-color: var(--color-600);
+  margin-block: 0.5rem;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color-200);
+  box-shadow: 0 -100vh 0 calc(100vh - 1rem) var(--color-300);
+  border-radius: 10px;
+}
+
+h1,
+h2,
+h3 {
   font-size: var(--fs-600);
   font-weight: 700;
   text-transform: uppercase;
@@ -100,6 +199,19 @@ h3 {
   font-size: var(--fs-400);
 }
 
-section, p {
+section,
+p {
   margin-bottom: 1em;
+}
+
+section {
+  background-color: var(--color-600);
+}
+
+#projects {
+  background-image: url("assets/skills-bg.jpg");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 250%;
 }
