--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   display: flex;
   gap: 4rem;
   justify-content: center;
-  padding-block-end: 2rem;
-  padding-block-start: calc(2rem + 75px / 2);
+  padding-block-start: calc(var(--spacing-900) + 75px / 2);
+  padding-block-end: var(--spacing-900);
 }
 
 #projects {
@@ -12,4 +12,9 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 250%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 75ch;
 }
