--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -2,22 +2,31 @@
   --_card-width: 200px;
   --_icon-size: 75px;
   --_padding: 2rem;
+  display: grid;
+  grid-template-rows: 1fr 2fr;
   width: var(--_card-width);
   background-color: var(--color-700);
-  padding-block-start: calc(var(--_icon-size) / 2 + 1rem);
   padding-block-end: 1rem;
   padding-inline: var(--_padding);
   border-radius: 8px;
-  position: relative;
 }
 
 .card > *:not(:last-child) {
   padding-block-end: 1em;
 }
 
+.card-header {
+  margin-block-start: calc(-1 * (var(--_icon-size) / 2));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
 .card-title {
   color: var(--color-200);
   text-align: center;
+  font-size: var(--fs-500);
 }
 
 .card-icon {
@@ -29,10 +38,7 @@
   border-radius: 50%;
   color: var(--color-200);
   font-size: 2rem;
-  position: absolute;
   outline: 5px solid var(--color-600);
-  left: calc(var(--_padding) + (var(--_card-width) - var(--_icon-size)) / 2);
-  top: calc(-1 * ((var(--_icon-size))) / 2);
 }
 
 .card-content ul {
