--- a/src/components/ProjectsGrid/index.css
+++ b/src/components/ProjectsGrid/index.css
@@ -1,3 +1,7 @@
+.projects-wrapper {
+  position: relative;
+}
+
 .projects,
 .projects-scroller {
   display: grid;
@@ -27,4 +31,113 @@
   width: 100%;
   aspect-ratio: 16 / 9;
   object-fit: cover;
+}
+
+.projects .next,
+.projects .previous {
+  display: none;
+  align-items: center;
+  z-index: 10;
+  position: absolute;
+  width: 3rem;
+  padding: 1rem;
+  background: rgb(0 0 0 / 0);
+  opacity: 0;
+}
+
+.projects .previous {
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.projects .next {
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.projects:first-child :where(.next, .previous) {
+  display: flex;
+}
+
+.projects-scroller:hover :where(.next, .previous) {
+  opacity: 1;
+}
+
+:where(.next, .previous):hover {
+  background: rgb(0 0 0 / 0.3);
+}
+
+:where(.next, .previous) > svg {
+  transition: transform 75ms linear;
+  transform: scale(1);
+}
+
+:where(.next, .previous):hover > svg {
+  transform: scale(1.2);
+}
+
+.projects:target :where(.next, .previous) {
+  display: flex;
+}
+
+.projects-scroller:has(:target:not(:first-child))
+  .projects:first-of-type
+  .next {
+  display: none;
+}
+
+.projects .projects-navigation {
+  opacity: 0;
+  position: absolute;
+  display: flex;
+  gap: 3px;
+
+  top: -1rem;
+  right: 2rem;
+}
+
+.projects .projects-navigation > * {
+  width: 1rem;
+  height: 2px;
+  background: white;
+  opacity: 0.5;
+}
+
+.projects-scroller:has(.project:target) .projects-navigation > *:nth-child(1) {
+  opacity: 0.5;
+}
+
+.projects .projects-navigation > *:nth-child(1),
+.projects:nth-child(1):target
+  ~ .projects
+  .projects-navigation
+  > *:nth-child(1) {
+  opacity: 1;
+}
+
+.projects:nth-child(2):target
+  ~ .projects
+  .projects-navigation
+  > *:nth-child(2) {
+  opacity: 1;
+}
+
+.projects:nth-child(3):target
+  ~ .projects
+  .projects-navigation
+  > *:nth-child(3) {
+  opacity: 1;
+}
+
+.projects:nth-child(4):target
+  ~ .projects
+  .projects-navigation
+  > *:nth-child(4) {
+  opacity: 1;
+}
+
+.projects-scroller:hover .projects .projects-navigation {
+  opacity: 1;
 }
