--- a/src/components/ProjectsGrid/index.css
+++ b/src/components/ProjectsGrid/index.css
@@ -78,66 +78,34 @@
   transform: scale(1.2);
 }
 
-.projects:target :where(.next, .previous) {
+.projects-scroller:target :where(.next, .previous) {
   display: flex;
 }
 
-.projects-scroller:has(:target:not(:first-child))
-  .projects:first-of-type
-  .next {
-  display: none;
-}
-
-.projects .projects-navigation {
+.projects-scroller .projects-navigation {
   opacity: 0;
   position: absolute;
   display: flex;
   gap: 3px;
-
   top: -1rem;
   right: 2rem;
 }
 
-.projects .projects-navigation > * {
+.projects-scroller .projects-navigation > * {
   width: 1rem;
   height: 2px;
   background: white;
   opacity: 0.5;
 }
 
-.projects-scroller:has(.project:target) .projects-navigation > *:nth-child(1) {
+.projects-scroller .projects-navigation > * {
   opacity: 0.5;
 }
 
-.projects .projects-navigation > *:nth-child(1),
-.projects:nth-child(1):target
-  ~ .projects
-  .projects-navigation
-  > *:nth-child(1) {
+.projects-scroller .projects-navigation > *.active {
   opacity: 1;
 }
 
-.projects:nth-child(2):target
-  ~ .projects
-  .projects-navigation
-  > *:nth-child(2) {
-  opacity: 1;
-}
-
-.projects:nth-child(3):target
-  ~ .projects
-  .projects-navigation
-  > *:nth-child(3) {
-  opacity: 1;
-}
-
-.projects:nth-child(4):target
-  ~ .projects
-  .projects-navigation
-  > *:nth-child(4) {
-  opacity: 1;
-}
-
-.projects-scroller:hover .projects .projects-navigation {
+.projects-scroller:hover .projects-navigation {
   opacity: 1;
 }
