--- a/src/components/ProjectsGrid/index.css
+++ b/src/components/ProjectsGrid/index.css
@@ -21,6 +21,32 @@
 .projects > .project {
   border-radius: 0.25rem;
   overflow: hidden;
+  position: relative;
+  transition: all 300ms ease-in-out;
+}
+
+.projects > .project .content {
+  background-color: var(--color-600);
+  padding: 1rem;
+  padding-block-end: 2rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  border-radius: 0 0 0.25rem 0.25rem;
+  transition: all 300ms ease-in-out;
+}
+
+.projects > .project:hover :where(.content) {
+  opacity: 0.9;
+  transition: all 300ms ease-in-out;
+}
+
+.projects > .project:hover {
+  transform: scale(1.2);
+  transition: all 300ms ease-in-out;
+  z-index: 10;
 }
 
 .projects .project-image {
