--- a/src/components/ProjectsGrid/index.css
+++ b/src/components/ProjectsGrid/index.css
@@ -1,10 +1,13 @@
 .projects-wrapper {
   position: relative;
+  max-height: fit-content;
 }
 
 .projects,
 .projects-scroller {
-  display: inline-block;
+  display: grid;
+  column-gap: 0.5rem;
+  grid-auto-flow: column;
 }
 
 .projects-scroller {
@@ -13,41 +16,28 @@
   grid-auto-columns: 100%;
   padding: 0 3rem;
   scroll-padding-inline: 3rem;
-  white-space: nowrap;
 }
 
 .projects > .project {
-  display: inline-block;
-  padding-inline: 0.2rem;
-  width: 25%;
   border-radius: 0.25rem;
   overflow: hidden;
   position: relative;
-  transition: all 300ms ease-in-out;
 }
 
 .projects > .project .content {
+  display: none;
   background-color: var(--color-600);
   padding: 1rem;
-  padding-block-end: 2rem;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   opacity: 0;
-  border-radius: 0 0 0.25rem 0.25rem;
-  transition: all 300ms ease-in-out;
 }
 
 .projects > .project:hover :where(.content) {
-  opacity: 0.9;
-  transition: all 300ms ease-in-out;
-}
-
-.projects > .project:hover {
-  transform: scale(1.2);
-  transition: all 300ms ease-in-out;
-  z-index: 10;
+  display: block;
+  opacity: 0.5;
 }
 
 .projects .project-image {
