--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 250%;
+  position: relative;
+  padding-block: 0;
 }
 
 .flex-container {
