Fix animation of the modal

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 250%;
+  position: relative;
 }
 
 .flex-container {
