--- a/src/components/Accordion/index.css
+++ b/src/components/Accordion/index.css
@@ -1,6 +1,7 @@
 .accordion {
   display: flex;
   gap: 1rem;
+  height: 30rem;
   --_padding: 0.5rem;
   --_border-radius: 0.3rem;
   --_icon-size: 2rem;
@@ -13,6 +14,7 @@
   padding: var(--_padding);
   padding-right: calc(var(--_padding) * 4);
   border-radius: calc((var(--_padding) * 2) / 2);
+  transition: flex-basis 500ms ease-in-out, flex-grow 500ms ease-in-out;
 }
 
 .accordion .active {
@@ -44,4 +46,13 @@
   padding-block: var(--_padding);
   padding-inline: calc(2 * var(--_padding));
   border-radius: var(--_border-radius);
+}
+
+.accordion img {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
