--- a/src/components/Accordion/index.css
+++ b/src/components/Accordion/index.css
@@ -48,8 +48,23 @@
   border-radius: var(--_border-radius);
 }
 
-.accordion img {
+.accordion .active .panel__content p {
+  transition: transform 500ms 500ms, opacity 500ms 500ms;
+}
+
+.accordion .panel__content p {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+.accordion .active .panel__content p {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.accordion .panel__content img {
   position: absolute;
+  opacity: 1;
   inset: 0;
   width: 100%;
   height: 100%;
