--- a/src/components/Accordion/index.css
+++ b/src/components/Accordion/index.css
@@ -1,14 +1,24 @@
 .accordion {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
-  height: 30rem;
   --_padding: 0.5rem;
   --_border-radius: 0.3rem;
-  --_icon-size: 2rem;
+  --_icon-size: 1.5rem;
+  --_panel-color: hsla(199, 93%, 27%, 0.8);
+}
+
+@media (min-width: 1024px) {
+  .accordion {
+    flex-direction: row;
+    height: 30rem;
+  }
 }
 
 .accordion > .panel {
+  background: var(--_panel-color);
   position: relative;
+  margin: 0 auto;
   flex-basis: calc(var(--_padding) * 2 + var(--_icon-size));
   overflow: hidden;
   padding: var(--_padding);
@@ -20,6 +30,7 @@
 .accordion .active {
   flex-basis: clamp(15rem, 40vh, 20rem);
   flex-grow: 1;
+  background: none;
 }
 
 .accordion .accordion__title {
@@ -40,6 +51,9 @@
 .accordion .accordion__trigger {
   display: flex;
   align-items: center;
+  gap: 1rem;
+  text-transform: uppercase;
+  font-weight: 700;
   flex-direction: row-reverse;
   background-color: aqua;
   border: none;
