--- a/src/components/Accordion/index.css
+++ b/src/components/Accordion/index.css
@@ -1,11 +1,12 @@
 .accordion {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   --_padding: 0.5rem;
   --_border-radius: 0.3rem;
   --_icon-size: 1.5rem;
-  --_panel-color: hsla(199, 93%, 27%, 0.8);
+  --_panel-color: hsla(199 93% 27% / 0.8);
+  --_button-color: hsla(200 70% 80%);
 }
 
 @media (min-width: 1024px) {
@@ -18,11 +19,9 @@
 .accordion > .panel {
   background: var(--_panel-color);
   position: relative;
-  margin: 0 auto;
   flex-basis: calc(var(--_padding) * 2 + var(--_icon-size));
   overflow: hidden;
   padding: var(--_padding);
-  padding-right: calc(var(--_padding) * 4);
   border-radius: calc((var(--_padding) * 2) / 2);
   transition: flex-basis 500ms ease-in-out, flex-grow 500ms ease-in-out;
 }
@@ -43,6 +42,7 @@
 
 .accordion .accordion__icon {
   width: var(--_icon-size);
+  height: var(--_icon-size);
   font-size: var(--_icon-size);
   color: var(--color-500);
   z-index: 10;
@@ -51,15 +51,26 @@
 .accordion .accordion__trigger {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   text-transform: uppercase;
   font-weight: 700;
   flex-direction: row-reverse;
-  background-color: aqua;
   border: none;
-  padding-block: var(--_padding);
-  padding-inline: calc(2 * var(--_padding));
-  border-radius: var(--_border-radius);
+  border-radius: 50%;
+  padding: 0;
+  background: white;
+}
+
+.accordion .active .accordion__trigger {
+  border-radius: 25px var(--_border-radius) var(--_border-radius) 25px;
+  padding: 0 0.5rem 0 0;
+}
+
+.accordion .accordion__trigger > *:nth-child(2) {
+  background: var(--_button-color);
+  border: none;
+  padding: 0.5rem;
+  border-radius: 50%;
 }
 
 .accordion .active .panel__content p {
