--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-#skills {
-  padding-block-start: var(--spacing-900);
-  padding-block-end: var(--spacing-900);
-}
-
-#projects {
-  position: relative;
-}
-
 #projects::before {
   content: "";
   position: absolute;
@@ -15,11 +6,14 @@
   bottom: 0;
   width: 100%;
   opacity: 0.05;
-  z-index: -1;
   background-image: url("/src/assets/skills-bg.jpg");
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
+}
+
+#skills {
+  background: var(--background);
 }
 
 .flex-container {
