--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -2,6 +2,7 @@
   position: relative;
   padding-inline: var(--spacing-800);
   padding-block: var(--spacing-900);
+  isolation: isolate;
 }
 
 .hero::before {
