--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,14 @@ svg {
   --spacing-700: clamp(1.73rem, calc(1.64rem + 0.45vw), 2.2rem);
   --spacing-800: clamp(3rem, calc(1.94rem + 0.65vw), 4rem);
   --spacing-900: clamp(5rem, calc(2.31rem + 0.91vw), 6rem);
+
+  --background: linear-gradient(
+    45deg,
+    hsl(213 14% 12% / 1) 24%,
+    hsl(214 16% 20% / 1) 54%,
+    hsl(213 15% 15% / 1) 75%,
+    hsl(213 20% 17% / 1) 90%
+  );
 }
 
 body {
@@ -211,19 +219,16 @@ h3 {
 section {
   padding-block: var(--spacing-900);
   padding-inline: var(--spacing-700);
+  position: relative;
 }
 
 p {
   margin-bottom: 1em;
 }
 
-section {
-  background-color: inherit;
-  position: relative;
-}
-
 section h2 {
   text-align: center;
   font-size: var(--fs-900);
   margin-bottom: 1.5em;
+  color: var(--color-highlight-400);
 }
